fixed alignment

--- a/Milestone_4/static/css/admin.css
+++ b/Milestone_4/static/css/admin.css
@@ -113,3 +113,10 @@ td {
     padding-top: 10px;
     padding-bottom: 10px;
 }
+
+th {
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
